--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
 
         
         <div class="main-weather-display info">
-          <div class="weather-icon">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Weather icon">
-          </div>
           <div class="general-info">
+            <img class="weather-icon">
             <p class="condition">MOSTLY SUNNY</p>
             <h1 class="location">GUANGZHOU, CHINA</h1>
+            
             <span class="degrees">69</span>
           </div>
           <div class="weather-details info">
